Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,8 +13,8 @@ steps:
  - task: NodeTool@0
  - script: yarn install
    displayName: 'Yarn install'
-   workingDirectory: ./client
+   workingDirectory: client
 
  - script: lerna run build-pord --scope @portfolio/shell
    displayName: 'Build Shell'
-   workingDirectory: ./client
+   workingDirectory: client
