--- a/client/packages/curriculumvitae/package.json
+++ b/client/packages/curriculumvitae/package.json
@@ -23,11 +23,13 @@
   "scripts": {
     "build-dev": "webpack --config=webpack.dev.ts",
     "build-serve": "webpack-dev-server --config=webpack.dev.ts",
+    "build-serve-prod": "webpack-dev-server --config=webpack.prod.ts",
     "lint": "eslint ./src/**/*.{js,ts,tsx}"
   },
   "bugs": {
     "url": "https://github.com/chorobin/portfolio/issues"
-  },  "dependencies": {
+  },
+  "dependencies": {
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
@@ -57,9 +59,10 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "prettier": "^2.0.5",
+    "svg-inline-loader": "^0.8.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
-    "webpack": "^5.0.0-beta.22",
+    "webpack": "^5.0.0-beta.28",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.0.9"
