--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,9 +14,6 @@ steps:
    displayName: 'Yarn install'
    workingDirectory: client
 
- - script: yarn global add lerna
-   displayName: 'Install lerna'
-
- - script: lerna run build-pord --scope @portfolio/shell
+ - script: yarn run lerna run build-prod --scope @portfolio/shell
    displayName: 'Build Shell'
    workingDirectory: client
