Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,13 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+ branches:
+  include:
+    - master
+ paths:
+  include:
+    - client/packages/shell
+    
 
 pool:
   vmImage: 'ubuntu-latest'
