--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,11 +14,5 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
- - script: yarn install
-   displayName: 'Yarn install'
-   workingDirectory: client
-
- - script: yarn run lerna run build-prod --scope $(scope)
-   displayName: 'Build Shell'
-   workingDirectory: client
+extends:
+  template: azure-pipelines-client-template.yml
