Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,4 +17,4 @@ pool:
 extends:
   template: azure-pipelines-client-template.yml
   parameters:
-    scope: '@portfolio/client'
+    scope: '@portfolio/shell'
